[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.6",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "requests>=2.32.3",
    "reportlab>=4.4.1",
    "xlsxwriter>=3.2.3",
]
